# ocaml-npy

./: README.md  dune-project  npy.opam
lib/: dune  npy.ml  npy.mli
test/: dune  interop.ml  test_npy.ml
